infra/part1-single-ec2/main.tf
resource "aws_security_group" "app_sg" {

  name = "flask-express-sg"

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "app_server" {

  ami           = var.ami_id
  instance_type = var.instance_type

   key_name = "dev-pankj"  

  vpc_security_group_ids = [aws_security_group.app_sg.id]

  user_data = file("user-data.sh")

  tags = {
    Name = "flask-express-ec2"
  }
}
